<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, CameraToMatrixActivity!</string>
    <string name="app_name">PIXEL 8 Ball</string>
    
    <string name="rrated">Rated R Mode</string>
    <string name="rratedSummary">Adds an extra Rated R Response</string>
    <string name="pref_r">pref_r</string>
    
    <string name="menu_about_title">About</string> 
    <string name="menu_about_summary">http://ledpixelart.com\n\nDesigned by Open Gadgets LLC</string>
     <string name="versionString">Version</string> 
   
   
    <string name="prefTitle">Eightball Settings</string>
    <string name="menu_prefs_title">Settings</string>
    <string name="prefSummary">Eightball Settings</string>
  
   <string name="OKText">OK</string>   
   
    <string name="selected_matrix">selected_matrix</string>
    <string name="matrix">PIXEL Model</string>
    <string name="matrixSummary">Select your PIXEL Model/LED Panel Model</string>    
    <string name="dialogTitleMatrix">LED Panel Selection</string>
    <string name="matrix_default_value">3</string>
    
    <string name="debugMode">Debug Mode</string>    
    <string name="pref_debugMode">pref_debugMode</string>
    <string name="pref_debugModeDefault">false</string>    
    <string name="debugModeSummary">Displays debug messages, use to see how often the Bluetooth connections are getting disconnected and connected as well as other debug messages</string>
    
     <string name="BootloaderVersionString">Bootloader Version</string> 
    <string name="FirmwareVersionString">Firmware Version</string> 
    <string name="LibraryVersionString">Library Version</string> 
    <string name="HardwareVersionString">Hardware Version</string> 
   
    
    <string name="AutoSelectPanel">Auto Select PIXEL / LED Panel</string>    
    <string name="pref_AutoSelectPanel">pref_AutoSelectPanel</string>
    <string name="pref_AutoSelectPanelDefault">true</string>
    <string name="AutoSelectPanelSummary">Turn this off if you want to manually select the LED panel</string>
   
    
    <string name="bluetooth_pair">Blueooth Pairing</string>
    <string name="bluetooth_pairSummary">Shortcut to the Bluetooth settings screen. Pair to IOIO using code: 4545</string>
    
    
   
</resources>
